--- a/Public/global.css
+++ b/Public/global.css
@@ -1,24 +1,90 @@
-.clearfix {
-    content: "";
-    clear: both;
+html {
+ height: 100%;
+ width: 100%;
+ margin: 0px;
+ padding: 0px;
+ font-family: Arial;
+ color: rgba(204,204,204,1.0);
 }
 
+body pre {
+ overflow-x: auto;
+ padding: 8px;
+ background: rgba(0,0,0,0.66);
+ border-top: 2px solid rgba(0,0,0,0.66); border-right: 2px solid rgba(0,0,0,0.66); border-bottom: 2px solid rgba(0,0,0,0.66); border-left: 2px solid rgba(0,0,0,0.66);
+ border-radius: 8px;
+}
 body {
-    background: #121212;
+ background: black;
+ height: 100%;
+ width: 100%;
+ margin: 0px;
+ padding: 0px;
 }
 
-.full-page-header {
-    background: #343434;
+a {
+ color: peachpuff;
+ text-decoration: none;
 }
 
-.top-level-content-container {
-    background: #223333;
-    width: 67%;
+a:hover {
+ color: white;
+ text-decoration: underline;
 }
 
-@media only screen and (max-width: 800px) {
-    .top-level-content-container {
-        background-color: #223333;
-        width: 95%;
-    }
+a:visited {
+ color: grey;
+}
+
+.root-body-container {
+ padding: 8px;
+}
+
+.body-navigation-container a {
+ display: block;
+ margin: 0px;
+ padding: 8px;
+}
+.body-navigation-container {
+ background: rgba(24,48,96,1.0);
+ height: 40%;
+ width: 196px;
+ margin: 0px;
+ padding: 0px;
+ position: fixed;
+ border-top: 2px solid rgba(24,48,96,1.0); border-right: 2px solid rgba(24,48,96,1.0); border-bottom: 2px solid rgba(24,48,96,1.0); border-left: 2px solid rgba(24,48,96,1.0);
+ border-radius: 8px;
+}
+
+.body-content-container {
+ background: rgba(24,24,48,1.0);
+ display: flex;
+ flex-direction: column;
+ margin-left: 208px;
+ padding: 8px;
+ border-top: 2px solid rgba(24,24,48,1.0); border-right: 2px solid rgba(24,24,48,1.0); border-bottom: 2px solid rgba(24,24,48,1.0); border-left: 2px solid rgba(24,24,48,1.0);
+ border-radius: 8px;
+}
+
+@media screen and (max-width: 800px) {
+  .root-body-container {
+ padding: 0px;
+}
+
+.body-navigation-container a {
+ float: left;
+}
+.body-navigation-container {
+ width: 100%;
+ height: 8%;
+ position: relative;
+ border-top: 0px none rgba(24,24,48,1.0); border-right: 0px none rgba(24,24,48,1.0); border-bottom: 0px none rgba(24,24,48,1.0); border-left: 0px none rgba(24,24,48,1.0);
+ border-radius: 0px;
+}
+
+.body-content-container {
+ margin-left: 0px;
+ border-radius: 0px;
+}
+
 }
