--- a/Public/styles/lc_new.css
+++ b/Public/styles/lc_new.css
@@ -501,3 +501,16 @@ input {
 img {
 	max-width: 100%;
 }
+
+/* Allow bottom links to form a grid on small devices. */
+/* Do something different with header eventually. */
+@media (max-width: 600px) {
+	footer > :first-child {
+		padding: 1rem;
+	}
+	
+	footer {
+    	display: inline-grid;
+    	grid-template-columns: auto auto;
+	}
+}
